# poker-chip

./: .gitignore  LICENSE  NOTES.md  README.md  config.yml  environment.yml  poker_chip.py  poker_chip_linear.py  pyproject.toml  requirements.txt  setup.py
2d-ec0.20_ell1.000_w1.000_gmu2.00_H0.20_L1.0_poker/: poker-parameters.yml  poker_data.json
2d-elastic_H0.20_L1.0_ell0.10_kappa_1000.0_mu_0.59_GL/: GL-parameters.yml  GL_data.json
config/: cluster.yaml  config.yaml  config_convergence.yaml  config_elastic.yaml  config_elastic_nonlinear.yaml  config_linear.yaml  local.yaml  parameters.yaml  parameters.yml  parameters_damage.yaml  parameters_elastic_nonlinear.yaml  parameters_linear.yaml
damage/: __init__.py  alternate_minimization.py  default_parameters.yml  petsc_solvers.py  plots.py
docs/: workflows.md
examples/: example.py
mesh/: __init__.py  mesh_bar.py  mesh_box.py  mesh_chip.py
meshes/: __init__.py  mesh_bar.py  mesh_box.py
reference/: GL.py  __init__.py  formulas_paper.py  gent.py  gent_lindley_data.py
scripts/: aspect_ratio_study.py  collect_and_plot_nonlinear_elastic.py  collect_and_plot_results.py  collect_and_plot_results_3d.py  collect_and_plot_results_linear.py  mesh_convergence_study.py  multirun_examples.py  plot_solver_timing_comparison.py  plot_solver_timing_multirun.py  poker_chip.py  poker_chip_linear.py  postprocess_results.py  run_linear.py  run_multirun_study.py  run_nonlinear_elastic.py  run_nonlinear_elastic_GL.py  run_nonlinear_elastic_L.py  solver_timing_comparison.py
solvers/: __init__.py  petsc_solvers.py  poker_chip.py  (+3 more)
(+34 files in other folders)
